iptables/rules.v4
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-N INTERNET
-N PYCAPTIVE
-A PREROUTING -i eth2 -p tcp -m tcp --dport 80 -j PYCAPTIVE
-A PREROUTING -i eth2 -p tcp -m ucp --dport 80 -j PYCAPTIVE
-A PREROUTING -i eth2 -p tcp -m tcp --dport 443 -j DROP
-A PREROUTING -i eth2 -p tcp -m udp --dport 443 -j DROP
-A PYCAPTIVE -j MARK --set-mark 1
-A INTERNET -j ACCEPT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth2 -p tcp -m tcp -m mark --mark 1 -j DNAT --to-destination 192.168.0.254:14901
-A PREROUTING -i eth2 -p tcp -m ucp -m mark --mark 1 -j DNAT --to-destination 192.168.0.254:14901
-A PREROUTING -i eth2 -s 192.168.0.0/24 -p tcp -d 192.168.0.254 --dport 80 -j DNAT --to-destination 192.168.0.254:14901
-A PREROUTING -i eth2 -s 192.168.0.0/24 -p tcp --dport 80 -j DNAT --to-destination 192.168.0.254:3128
-A POSTROUTING -o eth1 -j MASQUERADE
-A PREROUTING -i eth2 -p tcp --sport 80 -j REDIRECT --to-port 3128
*filter:INPUT ACCEPT [0:0]:FORWARD ACCEPT [0:0]:OUTPUT ACCEPT [0:0]-A INPUT -p icmp -m conntrack --ctstate NEW,ESTABLISHED,RELATED --icmp-type 8 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth2 -p tcp --dport 22 -j ACCEPT
-A INPUT -i eth2 -p udp --dport 53 -j ACCEPT
-A INPUT -i eth2 -p tcp --dport 53 -j ACCEPT
-A INPUT -i eth2 -p udp --dport 67 --sport 68 -j ACCEPT
-A INPUT -i eth2 -p udp --dport 68 --sport 67 -j ACCEPT
-A INPUT -i eth2 -p udp --dport 953 -j ACCEPT
-A INPUT -i eth2 -p tcp --dport 953 -j ACCEPT
-A INPUT -j REJECT
-A OUTPUT -j ACCEPT
